# safe_ffi

./: .travis.yml  CHANGELOG.MD  Cargo.toml  README.md  appveyor.yml  index.html
0.1.0/: search-index.js
0.1.0/aho_corasick/: struct.Matches.html  struct.MatchesOverlapping.html  struct.StreamMatches.html  struct.StreamMatchesOverlapping.html
0.1.0/cbor/: struct.DecodedItems.html  struct.Items.html
0.1.0/itertools/: struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.Dedup.html  struct.Group.html  struct.GroupBy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  struct.Product.html  struct.PutBack.html  struct.PutBackN.html  struct.RcIter.html  struct.RepeatCall.html  struct.RepeatN.html  struct.Step.html  struct.Stride.html  struct.StrideMut.html  struct.TakeWhileRef.html  struct.Tee.html  struct.Unfold.html  struct.Unique.html  struct.UniqueBy.html  struct.WhileSome.html  struct.Zip.html  struct.ZipLongest.html  struct.ZipSlices.html
0.1.0/rand/: struct.AsciiGenerator.html  struct.Generator.html
0.1.0/regex/: struct.FindCaptures.html  struct.FindMatches.html  struct.RegexSplits.html  struct.RegexSplitsN.html  struct.SubCaptures.html  struct.SubCapturesNamed.html  struct.SubCapturesPos.html
0.1.0/safe_ffi/: fn.add_service.html  fn.create_account.html  fn.create_file.html  fn.create_sub_directory.html  fn.create_unregistered_client.html  fn.drop_client.html  fn.get_file_content.html  fn.get_file_content_from_service_home_dir.html  fn.get_file_size.html  fn.get_file_size_from_service_home_dir.html  fn.log_in.html  fn.register_dns.html  index.html  macro.ffi_try!.html  sidebar-items.js
0.2.0/: search-index.js
0.2.0/aho_corasick/: struct.Matches.html  (+3 more)
0.3.0/: search-index.js
0.4.1/: search-index.js
0.4.5/: search-index.js
0.5.0/: search-index.js
0.6.1/: index.html  search-index.js
master/: search-index.js
src/: config.rs  errors.rs  helper.rs  implementation.rs  launcher_config_handler.rs  lib.rs  lib_old.rs  macros.rs  test_utils.rs
(+2536 files in other folders)
