[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE API - FFI library"
documentation = "http://maidsafe.github.io/safe_ffi/latest/"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_ffi"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_ffi"
version = "0.4.0"

[dependencies]
clippy = {version = "~0.0.44", optional = true}
libc = "~0.2.4"
maidsafe_utilities = "~0.2.0"
routing = "~0.7.0"
safe_core = "~0.6.1"
safe_dns = "~0.6.0"
safe_nfs = "~0.6.1"
sodiumoxide = "~0.0.9"
rustc-serialize = "~0.3.18"
xor_name = "~0.0.4"

[features]
use-mock-routing = ["safe_dns/use-mock-routing", "safe_nfs/use-mock-routing", "safe_core/use-mock-routing"]

[lib]
crate_type = ["staticlib", "dylib", "rlib"]
name = "safe_ffi"
