[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE API - FFI library"
documentation = "http://maidsafe.github.io/safe_ffi/latest/"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_ffi"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_ffi"
version = "0.4.5"

[dependencies]
libc = "~0.2.8"
maidsafe_utilities = "~0.4.0"
rustc-serialize = "~0.3.18"
safe_core = "~0.9.0"
sodiumoxide = "~0.0.9"
xor_name = "~0.1.0"

[dependencies.clippy]
optional = true
version = "~0.0.48"

[features]
use-mock-routing = ["safe_core/use-mock-routing"]

[lib]
crate_type = ["staticlib", "dylib", "rlib"]
name = "safe_ffi"
