[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "SAFE API - FFI library"
documentation = "http://maidsafe.github.io/safe_ffi/latest/"
homepage = "http://maidsafe.net"
license = "GPL-3.0"
name = "safe_ffi"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_ffi"
version = "0.6.2"

[dependencies]
libc = "~0.2.10"
log = "~0.3.6"
maidsafe_utilities = "~0.5.3"
rustc-serialize = "~0.3.19"
safe_core = "~0.14.3"
sodiumoxide = "~0.0.10"
xor_name = "~0.1.0"

[dependencies.clippy]
optional = true
version = "~0.0.63"

[features]
use-mock-routing = ["safe_core/use-mock-routing"]

[lib]
crate_type = ["staticlib", "dylib", "rlib"]
name = "safe_ffi"
